[package]
name = "soundboard"
version = "1.0.0"
authors = ["r-o-b-o-t-o"]
edition = "2018"
default-run = "soundboard"
build = "build.rs"

[package.metadata.scripts]
package = "cargo run --features package --bin package"

[features]
package = ["walkdir"]

[[bin]]
name = "soundboard"
path = "src/main.rs"

[[bin]]
name = "package"
path = "scripts/package.rs"
required-features = ["package"]

[build-dependencies]
winres = "0.1.11"

[dependencies]
# Scripts dependencies
walkdir = { version = "2.3", optional = true }

# App dependencies
actix-files = "0.5.0"
actix-web = "3.3.2"
anyhow = "1.0.38"
chrono = "0.4.19"
cpal = "0.13.1"
ctrlc = "3.1.8"
fern = "0.6.0"
log = "0.4.14"
rodio = "0.13.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
tokio-tungstenite = "0.14.0"
futures-channel = "0.3.13"
futures-util = { version = "0.3.13", default-features = false, features = ["async-await", "sink", "std"] }
tokio = { version = "1.2.0", default-features = false, features = ["io-std", "macros", "rt-multi-thread", "time"] }
#web-view = { git = "https://github.com/Boscop/web-view.git", features = ["edge"] }
webview2 = { git = "https://github.com/sopium/webview2.git" }
winit = { git = "https://github.com/rust-windowing/winit" }
once_cell = "1.7.2"
winapi = "0.3.9"
wfd = "0.1.7"
trayicon = { git = "https://github.com/r-o-b-o-t-o/trayicon-rs.git", default-features = false, features = ["winit"] }
hotkey = "0.3.1"
winreg = "0.8.0"
argparse = "0.2.2"
ureq = "2.0.2"
zip = "0.5.11"
tokio-util = "0.6.3"
image = { version = "0.23.14", default-features = false, features = ["ico"] }
